--- a/gh-pages/content/assets/stylesheets/extra.css
+++ b/gh-pages/content/assets/stylesheets/extra.css
@@ -51,16 +51,51 @@
 }
 
 @font-face {
-  font-family: 'AmazonEmber';
-  src: url('/assets/typefaces/AmazonEmberDisplay_Rg.ttf') format('truetype'),
-    url('/assets/typefaces/AmazonEmberDisplay_Bd.ttf') format('truetype'),
-    url('/assets/typefaces/AmazonEmberDisplay_He.ttf') format('truetype'),
-    url('/assets/typefaces/AmazonEmberDisplay_Lt.ttf') format('truetype'),
-    url('/assets/typefaces/AmazonEmberDisplay_Md.ttf') format('truetype');
+  font-family: 'AmazonEmberDisplay';
+  src: url('../typefaces/AmazonEmberDisplay_Lt.woff2') format('woff2'),
+    url('../typefaces/AmazonEmberDisplay_Lt.woff') format('woff'),
+    url('../typefaces/AmazonEmberDisplay_Lt.eot') format('embedded-opentype'),
+    url('../typefaces/AmazonEmberDisplay_Lt.ttf') format('truetype');
+  font-weight: 300;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'AmazonEmberDisplay';
+  src: url('../typefaces/AmazonEmberDisplay_Rg.woff2') format('woff2'),
+    url('../typefaces/AmazonEmberDisplay_Rg.woff') format('woff'),
+    url('../typefaces/AmazonEmberDisplay_Rg.eot') format('embedded-opentype'),
+    url('../typefaces/AmazonEmberDisplay_Rg.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'AmazonEmberDisplay';
+  src: url('../typefaces/AmazonEmberDisplay_Md.woff2') format('woff2'),
+    url('../typefaces/AmazonEmberDisplay_Md.woff') format('woff'),
+    url('../typefaces/AmazonEmberDisplay_Md.eot') format('embedded-opentype'),
+    url('../typefaces/AmazonEmberDisplay_Md.ttf') format('truetype');
+  font-weight: 500;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'AmazonEmberDisplay';
+  src: url('../typefaces/AmazonEmberDisplay_Bd.woff2') format('woff2'),
+    url('../typefaces/AmazonEmberDisplay_Bd.woff') format('woff'),
+    url('../typefaces/AmazonEmberDisplay_Bd.eot') format('embedded-opentype'),
+    url('../typefaces/AmazonEmberDisplay_Bd.ttf') format('truetype');
+  font-weight: 700;
+  font-style: normal;
 }
 
 body {
-  font-family: 'AmazonEmber';
+  font-family: 'AmazonEmberDisplay', 'Helvetica Neue', Roboto, Arial, sans-serif;
+}
+
+code,
+pre,
+kbd {
+  font-family: Monaco, Menlo, Consolas, 'Courier Prime', Courier, 'Courier New',
+    monospace;
 }
 
 .md-logo img {
