chore: fix rendering of compliance table
- move description from a column to a tooltip
- tweak css so that table overflows instead of scrolls

--- a/gh-pages/content/assets/stylesheets/extra.css
+++ b/gh-pages/content/assets/stylesheets/extra.css
@@ -94,3 +94,8 @@ kbd {
 .md-typeset a {
   color: #5b79a0;
 }
+
+/* Required so compliance table is fully visible */
+.md-content {
+  overflow: initial;
+}
